<resources>
    <string name="app_name">زیارت اربعین(متن و صوت)</string>
    <string name="pilgrimage_arbaeen">زیارت اربعین</string>
    <string name="setting">تنظیمات</string>
    <string name="narratives">فضائل و روایات</string>
    <string name="salawat_count">ذکرشمار</string>
    <string name="share_app">ارسال برنامه</string>
    <string name="notices">حمایت</string>
    <string name="other_app">دیگر برنامه ها</string>
    <string name="comment">ثبت نظر</string>
    <string name="home_page">صفحه اصلی</string>
    <string name="about_us">درباره ما</string>
    <string name="exit">خروج</string>
    <string name="auto_scroll">اسکرول خودکار</string>
    <string name="show_translation">نمایش ترجمه</string>
    <string name="show_separator">نمایش جداکننده</string>
    <string name="screen_on">روشن ماندن صفحه</string>
    <string name="arabic_font_1">قرآن طه</string>
    <string name="arabic_font_2">نیریزی</string>
    <string name="arabic_font_3">نبی</string>
    <string name="persian_font_1">صمیم</string>
    <string name="persian_font_2">نازنین</string>
    <string name="persian_font_3">یکان</string>
    <string name="arabic_font">فونت عربی</string>
    <string name="arabic_text_size">سایز متن عربی</string>
    <string name="persian_font">فونت فارسی</string>
    <string name="persian_text_size">سایز متن فارسی</string>
    <string name="line_spacing">\u0020\u0020فاصله بین خطوط\u0020\u0020</string>
    <string name="sample_arabic_text">السَّلاَمُ عَلَى وَلِيِّ اللَّهِ وَ حَبِيبِهِ السَّلاَمُ عَلَى خَلِيلِ اللَّهِ وَ نَجِيبِه</string>
    <string name="sample_persian_text">سلام بر تو اى ولى خدا و حبيب خاص خدا سلام بر تو اى دوستدار و محبوب و برگزيده خدا</string>
    <string name="start_time">0:00</string>
    <string name="max_text_size_selected">حداکثر اندازه متن انتخاب شده است</string>
    <string name="min_text_size_selected">حداقل اندازه متن انتخاب شده است</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="install">Install</string>
    <string name="b_i">B/I</string>
    <string name="dialog_exit_title">آیا مایل به خروج از برنامه هستید؟</string>
    <string name="dialog_yes">بله</string>
    <string name="dialog_no">خیر</string>
    <string name="version_code"><b>نسخه</b> : 1.0.0</string>
    <string name="developer"><b>توسعه دهنده </b> : محمدیزدی</string>
    <string name="support_email"><b>ایمیل پشتیبانی </b>:</string>
    <string name="ttp">تیم توسعه دهنده پویا</string>
    <string name="programmer_name">برنامه نویس : محمد یزدی</string>
    <string name="code_version">ورژن برنامه : 1.0</string>
    <string name="notices_title">"در این قسمت محصولات جدید معرفی میشود"</string>
    <string name="show_new_videos">مشاهده ویدیو های جدید</string>
    <string name="show_new_banners">مشاهده بنر های جدید</string>
    <string name="error">خظای ناشناخته</string>
    <string name="need_internet">برای مشاهده این قسمت باید به اینترنت متصل باشید</string>
    <string name="need_install_cafebazaar">جهت ثبت نظر باید برنامه کافه بازار رانصب کنید</string>
    <string name="please_wait">لطفا منتظربمانید</string>
    <string name="reset">شمارنده صفر شود؟</string>
    <string name="yes_text">بله</string>
    <string name="no_text">خیر</string>
    <string name="select_mention">انتخاب ذکر</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_main_point">چه امتیازی به این برنامه می دهید؟</string>
    <string name="close">بستن</string>
    <string name="please_send_email">ممنون از نظر شما\nلطفا انتقادات و پیشنهادات خود را از طریق ایمیل برای ماارسال کنید </string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="submitt_comment">لطفا امتیاز خود را مشخص کنید</string>
    <string name="deleted_successfully">با موفقیت حذف شد</string>
    <string name="do_you_want_to_exit">آیا مایل به خروج هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="developer_applications_link">https://cafebazaar.ir/developer/mohammad_yazdi</string>
    <string name="market_app_id">http://cafebazaar.ir/app/?id=</string>
    <string name="comment_market_link">bazaar://details?id=</string>
    <string name="need_install_market">برای ثبت نظر باید اپلیکیشن کافه بازار را نصب داشته باشید</string>
    <string name="please_register_your_comment">ممنون از نظر شما\nلطفا نظر خود را در کافه بازار ثبت کنید</string>
    <string name="app_link_download">لینک برنامه&#160;</string>
    <string name="share_app_with">اشتراک گذاری با</string>
    <string name="email_address">ddt.supp@gmail.com</string>
    <string name="send_email">ارسال ایمیل</string>
    <string name="whatsapp_is_not_installed">واتساپ روی تلفن شما نصب نیست</string>
    <string name="whatsapp_business_is_not_installed">واتساپ تجاری روی تلفن شما نصب نیست</string>
    <string name="unknown_error">خطای ناشناخته</string>
    <string name="sample_mention_title">اللهم صل علی محمد و آل محمد</string>
    <string name="tv_sample_maxNumber">تعداد کل : 100</string>
    <string name="mention_title">نام ذکر</string>
    <string name="maxNumber">تعداد کل</string>
    <string name="submit">ثبت</string>
    <string name="delete_Mention">حذف ذکر</string>
    <string name="doYouWantToDeleteThisMention">آیا میخواید این ذکر را حذف کنید</string>
    <string name="completeMenion">التماس دعا</string>
    <string name="tasbihat">تسبیحات حضرت زهرا (س)</string>
    <string name="mentionDays">ذکر ایام هفته</string>
    <string name="saturdayMention">یا رَبِّ الْعالَمِین</string>
    <string name="sundayMention">یا ذَالجَلالِ وَ اْلاِکْرام</string>
    <string name="mondayMention">یا قاضیَ الحاجات</string>
    <string name="tuesdayMention">یا أَرْحَمَ الرَّاحِمِین</string>
    <string name="wednesdayMention">یا حَیُّ یا قَیّومُ</string>
    <string name="thursdayMention">لا إِلهَ إِلَّا اللَّهُ المَلِک الحقّ المُبین</string>
    <string name="fridayMention">الّلهُمَّ صَلِّ عَلَی مُحَمَّدٍ وَآلِ مُحَمَّدٍ و عجل فرجهم</string>
    <string name="tasbihatFirstMention">الله اکبر</string>
    <string name="tasbihatSecondMention">الحمدلله</string>
    <string name="tasbihatThirdMention">سبحان الله</string>
</resources>