<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_middle">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardCornerRadius="@dimen/space_medium">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/space_small">

            <TextView
                android:id="@+id/tv_comment"
                style="@style/tv_title_dialog_style"
                android:text="@string/comment"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_26sdp"
                android:layout_height="@dimen/_26sdp"
                android:layout_marginRight="@dimen/space_x_small"
                android:src="@drawable/ic_close"
                android:tint="@color/green_900"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_horizontal_divider"
                style="@style/view_divider_menu_style"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/tv_comment" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/tv_dialog_style"
                android:layout_width="match_parent"
                android:text="@string/how_main_point"
                app:layout_constraintTop_toBottomOf="@id/view_horizontal_divider" />

            <RatingBar
                android:id="@+id/rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_large"
                android:layoutDirection="rtl"
                android:numStars="5"
                android:stepSize="1"
                android:theme="@style/rating_bar_style"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rating" />

            <LinearLayout
                android:id="@+id/cl_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                app:layout_constraintLeft_toLeftOf="@id/rating_bar"
                app:layout_constraintRight_toRightOf="@id/rating_bar"
                app:layout_constraintTop_toBottomOf="@id/rating_bar"

                >

                <TextView
                    style="@style/tv_point_style"
                    android:text="@string/number_1" />

                <TextView
                    style="@style/tv_point_style"
                    android:text="@string/number_2" />

                <TextView
                    style="@style/tv_point_style"
                    android:text="@string/number_3" />

                <TextView
                    style="@style/tv_point_style"
                    android:text="@string/number_4" />

                <TextView
                    style="@style/tv_point_style"
                    android:text="@string/number_5" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_comment_caffe_bazzar"
                style="@style/tv_dialog_style"
                android:layout_marginTop="@dimen/space_large"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/space_medium"
                android:paddingHorizontal="@dimen/space_medium"
                android:text="@string/please_register_your_comment"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/text_size_12"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_point" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_comment"
                style="@style/btn_dialog_style"
                android:layout_marginTop="@dimen/_16sdp"
                android:alpha="0.5"
                android:text="@string/comment"
                android:textColor="@color/white"
                app:backgroundTint="@color/dark_green"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_comment_caffe_bazzar" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

