<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"

    tools:context=".fragments.MainFragment">

    <TextView
        android:id="@+id/tv_title_pilgrimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_medium"
        android:fontFamily="@font/nabi"
        android:gravity="center"
        android:text="@string/pilgrimage_arbaeen"
        android:textColor="@color/white"
        android:textSize="@dimen/main_tv_title_text_size"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/ll_large_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <Button
            android:id="@+id/btn_pilgrimage"
            android:layout_width="@dimen/main_btn_large_width"
            android:layout_height="@dimen/main_btn_large_height"
            android:background="@drawable/ic_main"
            android:fontFamily="@font/nabi"
            android:onClick="onClick"
            android:text="@string/pilgrimage_arbaeen"
            android:textColor="@color/black"
            android:textSize="@dimen/main_btn_large_text_size"
            android:textStyle="bold">

        </Button>

        <!--                <TextView-->
        <!--                    style="@style/button_style"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:text="@string/pilgrimage_arbaeen"-->
        <!--                    android:textSize="@dimen/_20ssp"-->
        <!--                    android:visibility="gone" />-->

    </LinearLayout>

    <LinearLayout
        android:layoutDirection="rtl"
        android:id="@+id/ll_medium_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_Xlarge"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <LinearLayout style="@style/main_ll_vertical_style">

            <Button
                android:id="@+id/btn_salawat_count"
                style="@style/main_medium_button_style"
                android:background="@drawable/ic_salawat_count"></Button>

            <TextView
                style="@style/main_medium_tv_style"
                android:text="@string/salawat_count" />

        </LinearLayout>

        <LinearLayout style="@style/main_ll_vertical_style">

            <Button
                android:id="@+id/btn_narratives"
                style="@style/main_medium_button_style"
                android:background="@drawable/ic_narrative">

            </Button>

            <TextView
                style="@style/main_medium_tv_style"
                android:text="@string/narratives" />

        </LinearLayout>

        <LinearLayout style="@style/main_ll_vertical_style">

            <Button
                android:id="@+id/btn_setting"
                style="@style/main_medium_button_style"
                android:background="@drawable/ic_setting">

            </Button>

            <TextView
                style="@style/main_medium_tv_style"
                android:text="@string/setting" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layoutDirection="rtl"
        android:id="@+id/ll_small_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_large"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

        <LinearLayout style="@style/main_ll_vertical_style">

            <Button
                android:id="@+id/btn_other_apps"
                style="@style/main_small_button_style"
                android:background="@drawable/ic_other_app">

            </Button>

            <TextView
                style="@style/main_small_tv_style"
                android:text="@string/other_app" />

        </LinearLayout>

        <LinearLayout style="@style/main_ll_vertical_style">

            <Button
                android:id="@+id/btn_comment"
                style="@style/main_small_button_style"
                android:background="@drawable/ic_comment"

                >

            </Button>

            <TextView
                style="@style/main_small_tv_style"
                android:text="@string/comment" />

        </LinearLayout>



        <LinearLayout style="@style/main_ll_vertical_style">

            <Button
                android:id="@+id/btn_share_app"
                style="@style/main_small_button_style"
                android:background="@drawable/ic_share_app">


            </Button>


            <TextView
                style="@style/main_small_tv_style"
                android:text="@string/share_app" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>